lesson5 (добавление библиотек - Lombok, Apache Commons, Swagger)